[gd_scene load_steps=5 format=3 uid="uid://ihtw8tbnruxh"]

[ext_resource type="Texture2D" uid="uid://cpylawk4b3s6j" path="res://Sprites/UI/computer_sheet.png" id="1_jpvkb"]
[ext_resource type="Script" path="res://Scripts/UI/level_fail.gd" id="2_i18nq"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="3_rchsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7c8b1"]
atlas = ExtResource("1_jpvkb")
region = Rect2(290, 2024, 314, 105)

[node name="LevelFail" type="Sprite2D"]
modulate = Color(1, 1, 1, 0.882353)
z_index = 90
rotation = 4.71239
texture = SubResource("AtlasTexture_7c8b1")
script = ExtResource("2_i18nq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 84.0
offset_top = -76.0
offset_right = 622.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_rchsa")
theme_override_font_sizes/font_size = 140
text = "Level failed"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Retry" type="Button" parent="Control"]
offset_top = -36.0
offset_right = 389.0
offset_bottom = 145.0
rotation = 1.5708
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_rchsa")
theme_override_font_sizes/font_size = 64
text = "Retry"

[node name="Quit" type="Button" parent="Control"]
offset_left = -64.0
offset_top = -36.0
offset_right = 324.0
offset_bottom = 145.0
rotation = 1.5708
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_rchsa")
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="button_down" from="Control/Retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="Control/Quit" to="." method="_on_quit_button_down"]
